force-app/main/default/objects/API_Usage_Log__c/API_Usage_Log__c.object-meta.xml
<CustomObject>
    <label>API Usage Log</label>
    <nameField>
        <displayFormat>API-{0000000}</displayFormat>
        <label>API Log Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>API Usage Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>