force-app/main/default/objects/API_Usage_Log__c/fields/Call_DateTime__c.field-meta.xml
<CustomField>
    <fullName>Call_DateTime__c</fullName>
    <label>Call Date Time</label>
    <required>true</required>
    <type>DateTime</type>
</CustomField>