force-app/main/default/objects/API_Usage_Log__c/fields/Response_Time_MS__c.field-meta.xml
<CustomField>
    <fullName>Response_Time_MS__c</fullName>
    <label>Response Time (MS)</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>